# mailtrace

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mailtrace/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  db.py  imb.py  lob.py  mail.py  middleware.py  models.py  pdf.py  routes.py  services.py  store.py  usps.py
src/mailtrace/routes/: __init__.py  addresses.py  admin.py  auth.py  ingest.py  main.py  pieces.py  setup.py
src/mailtrace/templates/: _base.html  avery.html  avery_sheet.html  envelope.html  generate.html  index.html  setup.html  tracking.html
src/mailtrace/templates/addresses/: edit.html  list.html
src/mailtrace/templates/admin/: edit_user.html  email.html  ingest.html  settings.html  users.html
src/mailtrace/templates/auth/: account.html  change_password.html  login.html
src/mailtrace/templates/pieces/: batch.html  detail.html  import.html  list.html  new.html  sheet_setup.html
tests/: conftest.py  test_app.py  test_imb.py  test_lob.py  test_routes.py  test_services.py  test_store.py  test_usps.py
