[project]
name = "mailtrace"
version = "0.1.0"
description = "Generate USPS first-class mail envelopes with traceable Intelligent Mail Barcodes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Colin Liu" }]
keywords = ["usps", "imb", "envelope", "tracking", "informed-visibility"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "pylabels>=1.2",
    "itsdangerous>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "bcrypt>=4.2",
    "typer>=0.12",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.15",  # keep in sync with .pre-commit-config.yaml's ruff-pre-commit rev
    "mypy>=1.11",
    "pre-commit>=3.8",
    "fakeredis[lua]>=2.24",
    "respx>=0.21",
    "types-redis>=4.6",
]

[project.scripts]
mailtrace = "mailtrace.__main__:main"

[project.urls]
Homepage = "https://github.com/Co1lin/mailtrace"
Issues = "https://github.com/Co1lin/mailtrace/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailtrace"]

[tool.hatch.build.targets.sdist]
include = ["src/mailtrace", "README.md", "LICENSE", "NOTICE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "C4",            # comprehensions
    "RUF",
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternaries are not always more readable (CRC inner loop)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
files = ["src/mailtrace"]

[[tool.mypy.overrides]]
module = ["labels.*", "reportlab.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["mailtrace"]
